tests/NormalTests/paczka1/fuzzy1/46403231.err
Error in line 10: A689 S215 30,13
Error in line 12: ZFXyb S215 99,5
Error in line 16: A689 S215 43,9
Error in line 18: A689 A689 56,5
Error in line 14: ZFXyb A615 26,2
Error in line 22: A689 S202 64,1
Error in line 35: ol21 S202 493
Error in line 23: ZFXyb A689 67,2
